Remove POST /reasons
